--- a/tests/m3uParser.Tests/m3uParser.Tests.csproj
+++ b/tests/m3uParser.Tests/m3uParser.Tests.csproj
@@ -76,6 +76,8 @@
     <None Include="Resources\sample_paste_bin.txt" />
     <None Include="Resources\iptv_sample.txt" />
     <None Include="Resources\big_list.txt" />
+    <Content Include="Resources\hashsigns.txt" />
+    <Content Include="Resources\samsung.txt" />
     <Content Include="simple-vod.txt" />
     <None Include="Resources\simple_vod.txt" />
     <None Include="Resources\header-with-parameters.txt" />
